--- a/package.json
+++ b/package.json
@@ -4,25 +4,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.7.1",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wagmi/chains": "^1.7.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
-    "@web3modal/wagmi": "^3.1.0",
     "aos": "^2.3.4",
+    "assert": "^2.0.0",
+    "ethers": "^6.7.1",
     "gh-pages": "^6.0.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0",
-    "viem": "^1.16.6",
-    "wagmi": "^1.4.4",
+    "react-scroll": "^1.8.9",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.1",
+    "viem": "^1.6.0",
+    "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
-    "web3": "^4.1.2"
+    "web3": "^4.0.3",
+    "web3modal": "^1.9.12"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +52,12 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
